[package]
name = "rustcast"
version = "0.1.0"
authors = ["Hailey Somerville <hailey@hailey.lol>"]

[dependencies]
lame = "0.1"
lewton = "0.6.2"
ogg = "0.5.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tiny_http = { path = "vendor/tiny-http" }
toml = "0.4"
uuid = { version = "0.5", features = ["v4"] }
